hphp/test/slow/hashbang_regression.php.expectf
Fatal error: A .php file must begin with '<?hh'. in %s/test/slow/hashbang_regression.php on line 1